[gd_scene load_steps=31 format=2]

[ext_resource path="res://Assets/Background/sBackground.png" type="Texture" id=1]
[ext_resource path="res://Assets/Background/sBackgroundOverlay.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/sButton.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/sButtonPressed.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI/Sometimes.otf" type="DynamicFontData" id=5]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=6]
[ext_resource path="res://Assets/UI/sQuestionMarkOn.png" type="Texture" id=7]
[ext_resource path="res://Assets/UI/sQuestionMark.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 180
outline_size = 20
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="Animation" id=5]
resource_name = "PlayButtonHover"
length = 0.1
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.3, 0.3 ), Vector2( 0.33, 0.33 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "PlayButtonUnhover"
length = 0.1
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.33, 0.33 ), Vector2( 0.3, 0.3 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.3, 0.3 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "OptionsHover"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.3, 0.3 ), Vector2( 0.33, 0.33 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "OptionsUnhover"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.33, 0.33 ), Vector2( 0.3, 0.3 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.3, 0.3 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "QuitHover"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.3, 0.3 ), Vector2( 0.33, 0.33 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "QuitUnhover"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.33, 0.33 ), Vector2( 0.3, 0.3 ) ]
}

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.3, 0.3 ) ]
}

[sub_resource type="Animation" id=22]
resource_name = "QuestionHover"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.3, 0.3 ), Vector2( 0.33, 0.33 ) ]
}

[sub_resource type="Animation" id=24]
resource_name = "QuestionUnhover"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.33, 0.33 ), Vector2( 0.3, 0.3 ) ]
}

[sub_resource type="Animation" id=23]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.3, 0.3 ) ]
}

[sub_resource type="DynamicFont" id=14]
size = 200
outline_size = 12
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 14 )

[sub_resource type="DynamicFont" id=21]
size = 60
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=16]
default_font = SubResource( 21 )

[sub_resource type="Animation" id=17]
resource_name = "HighScoreIdle"
length = 1.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 1.2, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 63, 297 ), Vector2( 63, 289 ), Vector2( 63, 305 ), Vector2( 63, 297 ) ]
}

[sub_resource type="Animation" id=18]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 63, 297 ) ]
}

[sub_resource type="Animation" id=19]
resource_name = "LastScoreIdle"
length = 1.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 1.2, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 832, 293 ), Vector2( 832, 285 ), Vector2( 832, 301 ), Vector2( 832, 293 ) ]
}

[sub_resource type="Animation" id=20]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 832, 293 ) ]
}

[node name="MainMenu" type="Node2D"]
script = ExtResource( 6 )

[node name="SBackground" type="Sprite" parent="."]
position = Vector2( 576, 324 )
scale = Vector2( 1.125, 1.08 )
texture = ExtResource( 1 )

[node name="SBackgroundOverlay" type="Sprite" parent="."]
position = Vector2( 576, 324 )
scale = Vector2( 1.125, 1.08 )
texture = ExtResource( 2 )

[node name="PlayButton" type="TextureButton" parent="."]
margin_left = -157.0
margin_top = 178.0
margin_right = 1315.0
margin_bottom = 478.0
rect_scale = Vector2( 0.3, 0.3 )
rect_pivot_offset = Vector2( 736, 150 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
__meta__ = {
"_editor_description_": "Play"
}

[node name="Label" type="Label" parent="PlayButton"]
margin_left = 510.0
margin_top = 36.6666
margin_right = 960.0
margin_bottom = 277.667
theme = SubResource( 2 )
text = "P L A Y"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="PlayButton"]
anims/PlayButtonHover = SubResource( 5 )
anims/PlayButtonUnhover = SubResource( 7 )
anims/RESET = SubResource( 6 )

[node name="OptionsButton" type="TextureButton" parent="."]
margin_left = -157.0
margin_top = 285.0
margin_right = 1315.0
margin_bottom = 585.0
rect_scale = Vector2( 0.3, 0.3 )
rect_pivot_offset = Vector2( 736, 150 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
__meta__ = {
"_editor_description_": "Options"
}

[node name="Label" type="Label" parent="OptionsButton"]
margin_left = 366.667
margin_top = 36.6666
margin_right = 1101.67
margin_bottom = 277.667
theme = SubResource( 2 )
text = "O P T I O N S"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="OptionsButton"]
anims/OptionsHover = SubResource( 8 )
anims/OptionsUnhover = SubResource( 10 )
anims/RESET = SubResource( 9 )

[node name="QuitButton" type="TextureButton" parent="."]
margin_left = -157.0
margin_top = 393.0
margin_right = 1315.0
margin_bottom = 693.0
rect_scale = Vector2( 0.3, 0.3 )
rect_pivot_offset = Vector2( 736, 150 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
__meta__ = {
"_editor_description_": "Quit"
}

[node name="Label" type="Label" parent="QuitButton"]
margin_left = 510.0
margin_top = 36.6666
margin_right = 960.0
margin_bottom = 277.667
theme = SubResource( 2 )
text = "Q U I T"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="QuitButton"]
anims/QuitHover = SubResource( 11 )
anims/QuitUnhover = SubResource( 12 )
anims/RESET = SubResource( 13 )

[node name="QuestionMark" type="TextureButton" parent="."]
margin_left = 1006.0
margin_top = -95.0
margin_right = 1206.0
margin_bottom = 205.0
rect_scale = Vector2( 0.3, 0.3 )
rect_pivot_offset = Vector2( 100, 150 )
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="QuestionMark"]
anims/QuestionHover = SubResource( 22 )
anims/QuestionUnhover = SubResource( 24 )
anims/RESET = SubResource( 23 )

[node name="UNSHAPED" type="Label" parent="."]
margin_left = 238.0
margin_top = 61.0
margin_right = 929.0
margin_bottom = 254.0
rect_pivot_offset = Vector2( 345.5, 96.5 )
theme = SubResource( 4 )
text = "UNSHAPED"
align = 1
valign = 1

[node name="HighScore" type="Label" parent="."]
margin_left = 63.0
margin_top = 297.0
margin_right = 303.0
margin_bottom = 416.0
theme = SubResource( 16 )
text = "HIGH SCORE :
0"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="HighScore"]
anims/HighScoreIdle = SubResource( 17 )
anims/RESET = SubResource( 18 )

[node name="LastScore" type="Label" parent="."]
margin_left = 832.0
margin_top = 293.0
margin_right = 1072.0
margin_bottom = 412.0
theme = SubResource( 16 )
text = "LAST SCORE :
0"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="LastScore"]
anims/LastScoreIdle = SubResource( 19 )
anims/RESET = SubResource( 20 )

[connection signal="mouse_entered" from="PlayButton" to="." method="_on_PlayButton_mouse_entered"]
[connection signal="mouse_exited" from="PlayButton" to="." method="_on_PlayButton_mouse_exited"]
[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="mouse_entered" from="OptionsButton" to="." method="_on_OptionsButton_mouse_entered"]
[connection signal="mouse_exited" from="OptionsButton" to="." method="_on_OptionsButton_mouse_exited"]
[connection signal="pressed" from="OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="mouse_entered" from="QuitButton" to="." method="_on_QuitButton_mouse_entered"]
[connection signal="mouse_exited" from="QuitButton" to="." method="_on_QuitButton_mouse_exited"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="mouse_entered" from="QuestionMark" to="." method="_on_QuestionMark_mouse_entered"]
[connection signal="mouse_exited" from="QuestionMark" to="." method="_on_QuestionMark_mouse_exited"]
[connection signal="pressed" from="QuestionMark" to="." method="_on_QuestionMark_pressed"]
